fix: standardize titles and slugs in release notes and tips documentation

--- a/docs/releases/2025-02-08-jhipster-release-8.9.0.mdx
+++ b/docs/releases/2025-02-08-jhipster-release-8.9.0.mdx
@@ -1,8 +1,8 @@
 ---
-title: リリース 8.9.0
-slug: 2025年2月8日のJHipster 8.9.0リリース記事
-displayed_sidebar: ドキュメントサイドバー
-sidebar_class_name: 隠された
+title: Release 8.9.0
+slug: /2025/02/08/jhipster-release-8.9.0.html
+displayed_sidebar: docsSidebar
+sidebar_class_name: hidden
 ---
 
 # JHipster リリース v8.9.0
