--- a/docs/releases/2025-05-06-jhipster-release-8.11.0.mdx
+++ b/docs/releases/2025-05-06-jhipster-release-8.11.0.mdx
@@ -1,8 +1,8 @@
 ---
-title: リリース8.11.0
-slug: 2025年5月6日のJHipsterリリース8.11.0
-displayed_sidebar: ドキュメントサイドバー
-sidebar_class_name: 隠された
+title: Release 8.11.0
+slug: /2025/05/06/jhipster-release-8.11.0.html
+displayed_sidebar: docsSidebar
+sidebar_class_name: hidden
 ---
 
 # JHipster v8.11.0 リリース
