--- a/docs/releases/2025-03-31-jhipster-release-8.10.0.mdx
+++ b/docs/releases/2025-03-31-jhipster-release-8.10.0.mdx
@@ -1,8 +1,8 @@
 ---
-title: リリース 8.10.0
-slug: 2025年3月31日のJHipsterリリース8.10.0のHTMLファイル
-displayed_sidebar: ドキュメントサイドバー
-sidebar_class_name: 隠れた
+title: Release 8.10.0
+slug: /2025/03/31/jhipster-release-8.10.0.html
+displayed_sidebar: docsSidebar
+sidebar_class_name: hidden
 ---
 
 # JHipster v8.10.0 リリース
