fix: standardize title and sidebar settings in release notes for v9.0.0-beta.0

--- a/docs/releases/2025-12-05-jhipster-release-9.0.0-beta.0.mdx
+++ b/docs/releases/2025-12-05-jhipster-release-9.0.0-beta.0.mdx
@@ -1,11 +1,11 @@
 ---
-title: バージョン 9.0.0 ベータ0
+title: Release 9.0.0-beta.0
 slug: /2025/12/05/jhipster-release-9.0.0-beta.0.html
-displayed_sidebar: ドキュメントサイドバー
-sidebar_class_name: 隠れた
+displayed_sidebar: docsSidebar
+sidebar_class_name: hidden
 ---
 
-# JHipster リリース v9.0.0-beta.0
+# JHipster v9.0.0-beta.0 リリース
 
 これはJHipster v9のベータリリースです。
 
